--- a/css/pomodoro_style.css
+++ b/css/pomodoro_style.css
@@ -21,12 +21,13 @@ nav {
 }
 
 nav a {
-    margin: 5px 10px;
+    margin: 0 10px;
     text-decoration: none;
     color: white;
-    padding: 8px 12px;
+    padding: 5px 10px;
     border-radius: 5px;
 }
+
 
 nav a:hover, nav a.active {
     background-color: #555;
@@ -35,6 +36,12 @@ nav a:hover, nav a.active {
 main {
     padding: 20px;
 }
+
+h2 {
+    margin-bottom: 20px;
+}
+
+
 #pomodor-title{
     text-align: center;
 }
